Fixed navbar spacing to match closer

--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -203,8 +203,8 @@
   z-index: 100;
   position: sticky;
   padding-top: 1px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
 
   @media (max-width: 1185px) {
     padding-left: 24px;
