--- a/app/assets/stylesheets/components/sidebar.scss
+++ b/app/assets/stylesheets/components/sidebar.scss
@@ -14,6 +14,7 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+  background-color: rgb(255, 255, 255);
 }
 
 .sidebar-header {
@@ -22,19 +23,26 @@
   padding: 12px 12px 16px 12px;
   text-align: center;
   word-break: break-word;
+  border: 1px solid rgba(0, 0, 0, 0.08);
 }
 
-.sidebar-header > img {
-  margin-bottom: -34px;
+.sidebar-banner {
+  // width: 100%;
+  background-position: 50% 50%;
+  margin: -12px -12px 0px -12px;
+  overflow-wrap: break-word;
+}
+
+.sidebar-banner-img {
   width: 100%;
-  height: 54px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  height: 56.25px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
   object-fit: cover;
   display: -webkit-flex;
   display: flex;
   flex-wrap: wrap;
-  // display: inline-block;
+  display: inline-block;
   margin-bottom: 10px;
 }
 
